<resources>
    <string name="app_name">KFC Order</string>
    <string name="tap_anywhere">Tap anywhere to order</string>
    <string name="kfc_logo">KFC Logo</string>
    <string name="back">Back</string>
    <string name="cart">Cart</string>
    <string name="empty_order">Your order is empty</string>
    <string name="total_price">Total price:</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="product_image">Product Image</string>
    <string name="remove">Remove</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="take_your_order">Please take your\nORDER ID RECEIPT\nand proceed to the cashier</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="category_image">Category Image</string>
    <string name="choice_of_chicken">Choice of Chicken</string>
    <string name="original_recipe">Original Recipe</string>
    <string name="hot_and_crispy">Hot and Crispy</string>
    <string name="free">Free</string>
    <string name="variation">Variation</string>
    <string name="regular_drink">Regular Drink</string>
    <string name="medium_drink">Medium Drink</string>
    <string name="large_drink">Large Drink</string>
    <string name="p_55_00">P 55.00</string>
    <string name="p_75_00">P 75.00</string>
    <string name="p_80_00">P 80.00</string>
    <string name="choice_of_large_drinks">Choice of Large Drinks</string>
    <string name="regular_mashed_potato">Regular Mashed Potato</string>
    <string name="large_mashed_potato">Large Mashed Potato</string>
    <string name="large_iced_tea">Large Unsweetened Iced Tea</string>
    <string name="large_coke_original">Large Coke Original</string>
    <string name="large_coke_zero">Large Coke Zero</string>
    <string name="large_royal">Large Royal</string>
    <string name="large_sprite">Large Sprite</string>
    <string name="choice_of_medium_drinks">Choice of Medium Drinks</string>
    <string name="medium_unsweetened_iced_tea">Medium Unsweetened Iced Tea</string>
    <string name="medium_coke_original">Medium Coke Original</string>
    <string name="medium_coke_zero">Medium Coke Zero</string>
    <string name="medium_royal">Medium Royal</string>
    <string name="medium_sprite">Medium Sprite</string>
    <string name="choice_of_large_fixin">Choice of Large Fixin</string>
    <string name="large_crispy_fries">Large Crispy Fries</string>
    <string name="large_buttered_corn">Large Buttered Corn</string>
    <string name="large_macaroni">Large Macaroni</string>
    <string name="choice_of_regular_fixin">Choice of Regular Fixin</string>
    <string name="regular_crispy_fries">Regular Crispy Fries</string>
    <string name="regular_buttered_corn">Regular Buttered Corn</string>
    <string name="large_coleslaw">Large Coleslaw</string>
    <string name="regular_coleslaw">Regular Coleslaw</string>
    <string name="regular_macaroni">Regular Macaroni</string>
    <string name="regular_fixin">Regular Fixin</string>
    <string name="large_fixin">Large Fixin</string>
    <string name="mushroom_soup">Mushroom Soup</string>
    <string name="p10_00">+ P 10.00</string>
    <string name="regular_fixin_and_medium_drinks">Regular Fixin and Medium Drinks</string>
    <string name="regular_fixin_and_large_drinks">Regular Fixin and Large Drinks</string>
    <string name="large_fixin_and_medium_drinks">Large Fixin and Medium Drinks</string>
    <string name="large_fixin_and_large_drinks">Large Fixin and Large Drinks</string>
    <string name="choice_of_gravy">Choice of Gravy</string>
    <string name="regular_gravy">Regular Gravy</string>
    <string name="mushroom_gravy">Mushroom Gravy</string>
    <string name="p_15_00">+ P 15.00</string>
    <string name="choice_for_drinks">Choice for Drinks</string>
</resources>