<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4002b"
    tools:context=".ui.Menu">

    <RelativeLayout
        android:id="@+id/rl_Nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottom_border"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_buttons"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/arrow_back" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/kfc_logo"
            android:src="@drawable/logo_text" />

        <ImageButton
            android:id="@+id/btn_Cart"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_buttons"
            android:contentDescription="@string/cart"
            android:padding="12dp"
            android:src="@drawable/cart" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_Nav"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottom_border"
        android:paddingTop="5dp"
        android:paddingBottom="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_Summary"
        android:layout_below="@+id/rv_Categories" />

    <RelativeLayout
        android:id="@+id/rl_Summary"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:background="#D8FFFFFF"
        android:padding="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_Total" />

        <TextView
            android:id="@+id/tv_Summary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_Total"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/empty_order"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_Total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_Check"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/tv_TotalValue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_TotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_Check"
            android:layout_alignParentEnd="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttons"
            android:enabled="false"
            android:text="@string/proceed_to_checkout"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>