<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4002b"
    tools:context=".ui.Cart">

    <RelativeLayout
        android:id="@+id/rl_Nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bottom_border"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_buttons"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/arrow_back" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/kfc_logo"
            android:src="@drawable/logo_text" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_CartList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_Payment"
        android:layout_below="@+id/rl_Nav"
        android:layout_margin="20dp" />

    <RelativeLayout
        android:id="@+id/rl_Payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#D8FFFFFF"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_TotalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/tv_TotalValue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_TotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_TotalValue"
            android:background="@drawable/buttons"
            android:text="@string/proceed_to_payment"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>