<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Fixin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:text="@string/choice_of_large_fixin"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rbtn_LargeFixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_CustomText"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_LargeCrispyFriesPrice">

                <RadioButton
                    android:id="@+id/rbtn_LargeCrispyFries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/large_crispy_fries"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_LargeButteredCorn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/large_buttered_corn"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_LargeColeslaw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/large_coleslaw"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_LargeMashed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/large_mashed_potato"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_LargeMacaroni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/large_macaroni"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_LargeCrispyFriesPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_CustomText"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_LargeButteredCornPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_LargeCrispyFriesPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_LargeColeslawPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_LargeButteredCornPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/p10_00"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_LargeMashedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_LargeColeslawPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_LargeMacaroniPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_LargeMashedPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/p10_00"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>