<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Fixin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:text="@string/choice_of_regular_fixin"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rbtn_RegularFixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_CustomText"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_RegularCrispyFriesPrice">

                <RadioButton
                    android:id="@+id/rbtn_RegularCrispyFries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/regular_crispy_fries"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_RegularButteredCorn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/regular_buttered_corn"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_Mushroom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/mushroom_soup"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_RegularColeslaw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/regular_coleslaw"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_RegularMashed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/regular_mashed_potato"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbtn_RegularMacaroni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/regular_macaroni"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_RegularCrispyFriesPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_CustomText"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_RegularButteredCornPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_RegularCrispyFriesPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_MushroomPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_RegularButteredCornPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_RegularColeslawPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_MushroomPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/p10_00"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_RegularMashedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_RegularColeslawPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_RegularMacaroniPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_RegularMashedPrice"
                android:layout_alignParentEnd="true"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="14dp"
                android:text="@string/p10_00"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>